add input data front
